spacing fixed

--- a/common.css
+++ b/common.css
@@ -285,15 +285,16 @@ html {
 }
 
 .who-are-we ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+    /* list-style-type: none; */
+    padding: 0px;
+    margin: 3%;
+    line-height: 1.1em;
 }
 
 .who-are-we li {
     font-size: 1.1em;
-    color: #333;
     margin-bottom: 10px;
+
 }
 
 .cta-button {
